2008-03-19  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (mapi_change_message_class): Look into
	multipart/mixed for PGP messages.

	* mapihelp.cpp (mapi_get_attach): Add arg UNPROTECT and changed
	all callers.
	* common.h (DBG_MIME_PARSER, DBG_MIME_DATA): New.
	* mimeparser.c (debug_mime_parser, debug_mime_data): New to
	replace DEBUG_PARSER.
	(struct mime_context): Add field is_opaque_signed. 
	(t2body): Set it.
	(mime_decrypt): Handle an embedded opaque signed S/MIME part.
	(mime_verify_opaque): Add arg INBUFER, INBUFFERLEN and
	START_PART_COUNTER.

2008-03-18  Werner Koch  <wk@g10code.com>

	* mimeparser.c (message_cb): Clear all mimestruct fields.  Fixes
	segv introduced 2008-03-07.

	* engine-assuan.c (async_worker_thread): Handle broken pipe.

2008-03-13  Werner Koch  <wk@g10code.com>

	* mimeparser.c (message_cb): Skip the OPEN event in non-MIME mode.

	* rfc822parse.c (rfc822parse_open): Reset ERRNO.

2008-03-11  Werner Koch  <wk@g10code.com>

	* engine-assuan.c (op_assuan_encrypt): Factor some code out to ..
	(op_assuan_encrypt_bottom): .. new.
	(engine_assuan_encstate_s): New.
	* engine.c (engine_encrypt_start): Split some code into ..
	(engine_encrypt_prepare): .. new.
	(engine_cancel): Cancel prepared encryption.
	* mimemaker.c (mime_encrypt): Use engine_encrypt_prepare and _start.
	(mime_sign_encrypt): Likewise, but do the _start only after
	completing the signing.

2008-03-10  Werner Koch  <wk@g10code.com>

	* engine.c (FILTER_BUFFER_SIZE): Increase to 4k.
	(engine_filter, engine_wait, engine_wait): Replace Sleep by
	SwitchToThread.
	* engine-assuan.c (struct work_item_s): Increase buffer to 1k.
	(worker_start_write, async_worker_thread): Replace Sleep by
	SwitchToThread.

2008-03-07  Werner Koch  <wk@g10code.com>

	* mapihelp.cpp (mapi_get_sender): New.
	* mymapitags.h (PR_PRIMARY_SEND_ACCT): New.
	* mimemaker.c (do_mime_sign): Pass the sender to the engine.

	* common.h (opt): Add field SVN_REVISION.